--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 
 <body>
-	<div class="left-panel"></div>
+	<div class="left-panel">
+		LEFT PANEL
+	</div>
 	
     <div class="container">
         <div class="center-btn">
@@ -41,6 +43,8 @@
         </div>
     </div>
 
-	<div class="right-panel"></div>
+	<div class="right-panel">
+		RIGHT PANEL
+	</div>
 </body>
 </html>
