--- a/index.html
+++ b/index.html
@@ -8,34 +8,37 @@
     <title>Radial Menu Website</title>
 </head>
 
-
+<!-- 
+  
+  This should work for now you should add side menus and mobile compatibility
+  -dominik 
+  
+  -->
 <body>
-	<div class="left-panel">
-		LEFT PANEL
-	</div>
-	
+  <div id="bg"></div>
+  <div id="bgOverlay"></div>
     <div class="container">
         <div class="center-btn">
 			<div class="btn" id="btn1">
-				1
+				About
 			</div>
 			<div class="btn" id="btn2">
-				2
+				Student
 			</div>
 			<div class="btn" id="btn3">
-				3
+				Applying
 			</div>
 			<div class="btn" id="btn4">
-				4
+				Courses
 			</div>
 			<div class="btn" id="btn5">
-				5
+				Parent
 			</div>
 			<div class="btn" id="btn6">
-				6
+				Foundation
 			</div>
 			<div class="btn" id="btn7">
-				7
+				Contact
 			</div>
 			<div class="btn" id="btn8">
 				8
